--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <title>App</title>
   <link rel="stylesheet" href="/assets/app.css">
   <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap-theme.min.css">
   <!-- for more details visit: https://github.com/yeoman/grunt-usemin -->
 
   <!-- build:js(.) assets/vendor.min.js -->
